--- a/package.json
+++ b/package.json
@@ -4,10 +4,64 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@ago-dev/nx-aws-cdk-v2": "^1.6.1",
+    "@nx/cypress": "16.5.2",
+    "@nx/deno": "^16.4.0",
+    "@nx/eslint-plugin": "16.5.2",
+    "@nx/jest": "^16.5.2",
+    "@nx/js": "16.5.2",
+    "@nx/linter": "16.5.2",
+    "@nx/vite": "16.5.2",
     "@nx/workspace": "16.5.2",
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@testing-library/svelte": "^3.2.2",
+    "@tsconfig/svelte": "^4.0.1",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@vitest/coverage-c8": "~0.32.0",
+    "@vitest/ui": "~0.32.0",
+    "cross-env": "^7.0.3",
+    "cypress": "^12.16.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cdk": "^1.8.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-solid": "0.12.1",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "jsdom": "~22.1.0",
     "nx": "16.5.2",
-    "nx-cloud": "latest"
+    "nx-cloud": "latest",
+    "prettier": "^2.6.2",
+    "solid-jest": "^0.2.0",
+    "solid-js": "^1.7.6",
+    "solid-testing-library": "^0.5.1",
+    "svelte-check": "^2.10.2",
+    "svelte-jester": "^2.3.2",
+    "svelte-preprocess": "^5.0.3",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "tslib": "^2.5.3",
+    "typescript": "~5.1.3",
+    "vite": "~4.3.9",
+    "vite-plugin-solid": "2.7.0",
+    "vite-tsconfig-paths": "~4.2.0",
+    "vitest": "~0.32.0"
+  },
+  "dependencies": {
+    "aws-cdk": "^2.77.0",
+    "aws-cdk-lib": "^2.77.0",
+    "compression": "^1.7.4",
+    "constructs": "^10.2.10",
+    "express": "^4.18.2",
+    "preact": "^10.16.0",
+    "sirv": "^2.0.3",
+    "tslib": "^2.3.0"
   }
 }
