--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     "apps/services/posts",
     "libs/test"
   ],
-  "deno.config": "./apps/clients/deno-fresh/deno.json",
+  "deno.config": "./apps/clients/deno-svelte/deno.json",
   "deno.unstable": true,
   "deno.lint": true,
   "deno.importMap": "./import_map.json",
@@ -30,5 +30,6 @@
   },
   "[javascriptpreact]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
-  }
+  },
+  "svelte.enable-ts-plugin": true
 }
