--- a/apps/clients/deno-svelte/deno.json
+++ b/apps/clients/deno-svelte/deno.json
@@ -1,8 +1,19 @@
 {
+  "importMap": "../../../import_map.json",
   "tasks": {
     "dev": "deno run -A --node-modules-dir npm:vite",
     "build": "deno run -A --node-modules-dir npm:vite build",
     "preview": "deno run -A --node-modules-dir npm:vite preview",
     "serve": "deno run --allow-net --allow-read https://deno.land/std@0.157.0/http/file_server.ts dist/"
+  },
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
+    "checkJs": false
+  },
+  "lint": {
+    "rules": {
+      "tags": ["fresh", "recommended"]
+    }
   }
 }
