--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "express": "^4.18.2",
     "preact": "^10.16.0",
     "sirv": "^2.0.3",
+    "svelte": "^4.1.0",
     "tslib": "^2.3.0"
   }
 }
