--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -57,4 +57,4 @@ jobs:
         with:
           project: "useful-boa-58"
           entrypoint: "https://deno.land/std@0.188.0/http/index.html" # 📝 Update the entrypoint
-          root: "./apps/clients/deno-svelte/dist" # 📝 Update the root
+          root: "dist" # 📝 Update the root
