--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -56,5 +56,5 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "useful-boa-58"
-          entrypoint: "https://deno.land/std@0.188.0/http/index.html" # 📝 Update the entrypoint
-          root: "dist" # 📝 Update the root
+          entrypoint: "index.html" # 📝 Update the entrypoint
+          root: "apps/clients/deno-svelte/dist" # 📝 Update the root
