--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -56,5 +56,5 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "useful-boa-58"
-          entrypoint: "https://deno.land/std@0.157.0/http/file_server.ts dist/" # 📝 Update the entrypoint
+          entrypoint: "https://deno.land/std@0.157.0/http/file_server.ts/dist/" # 📝 Update the entrypoint
           root: "apps/clients/deno-svelte" # 📝 Update the root
