--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -57,4 +57,5 @@ jobs:
         with:
           project: "useful-boa-58"
           entrypoint: https://deno.land/std@0.157.0/http/file_server.ts # 📝 Update the entrypoint
-          root: dist # 📝 Update the root
+          root: "./apps/clients/deno-svelte/dist/" # 📝 Update the root
+          import-map: import-map.json
