--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -55,13 +55,14 @@ jobs:
       - name: List dirs & files
         run: |
           pwd
-          cd clients/apps/deno-svelte
+          ls -a
+          cd apps/clients/deno-svelte
           pwd
+          ls -a
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
           project: "useful-boa-58"
-          entrypoint: https://deno.land/std@0.157.0/http/file_server.ts/clients/deno-svelte # 📝 Update the entrypoint
-          root: "apps" # 📝 Update the root
-          import-map: "../import-map.json"
+          entrypoint: https://deno.land/std@0.157.0/http/file_server.ts/apps/clients/deno-svelte/dist # 📝 Update the entrypoint
+          root: "." # 📝 Update the root
