--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -57,12 +57,12 @@ jobs:
           pwd
           ls -a
           cd apps/clients/deno-svelte
-          pwd
+          deno task build
           ls -a
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
           project: "useful-boa-58"
-          entrypoint: "https://deno.land/std@0.157.0/http/file_server.ts dist/" # 📝 Update the entrypoint
-          root: "./apps/clients/deno-svelte/" # 📝 Update the root
+          entrypoint: "https://deno.land/std@0.157.0/http/file_server.ts" # 📝 Update the entrypoint
+          root: "./apps/clients/deno-svelte/dist" # 📝 Update the root
