--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -63,6 +63,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "deno-svelte"
+          project: "opsap-svelte"
           entrypoint: "https://deno.land/std@0.157.0/http/file_server.ts" # 📝 Update the entrypoint
           root: "./apps/clients/deno-svelte/dist" # 📝 Update the root
