--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -4,6 +4,10 @@ on:
     branches: main
   pull_request:
     branches: main
+    paths:
+      - ./apps/clients/deno-svelte
+      - ./libs/shared
+
 
 jobs:
   deploy:
