--- a/.github/workflows/deno-svelte-deploy.yml
+++ b/.github/workflows/deno-svelte-deploy.yml
@@ -53,16 +53,16 @@ jobs:
       - name: Install dependencies
         run: pnpm install --prefer-offline
         
-      # - name: Build step
-      #   run: pnpm exec nx run clients-deno-svelte:build  # 📝 Update the build command(s)
+      - name: Build step
+        run: pnpm exec nx run clients-deno-svelte:build  # 📝 Update the build command(s)
         
-      - name: Build and list dirs
-        run: |
-          pwd
-          ls -a
-          cd apps/clients/deno-svelte
-          deno task build
-          ls -a
+      # - name: Build and list dirs
+      #   run: |
+      #     pwd
+      #     ls -a
+      #     cd apps/clients/deno-svelte
+      #     deno task build
+      #     ls -a
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
